--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ yarn-error.log*
 /.idea/.gitignore
 /.idea/misc.xml
 /.idea/inspectionProfiles/profiles_settings.xml
+/.idea/modules.xml
+/.idea/study-react-source-code.iml
+/.idea/vcs.xml
+/.idea/inspectionProfiles/Project_Default.xml
